# secure-lock

./: .gitignore  package.json  readme.md
src/: index.html
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: README.md  icon.icns
src-tauri/src/: commands.rs  input_interceptor.rs  lib.rs  lock_controller.rs  main.rs  overlay_guard.rs  security_module.rs  window_manager.rs
src/js/: app.js  lock-active.js  lock-setup.js  unlock.js
src/styles/: main.css
